--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "A tab bar that triggers actions and supports dropdown options.",
   "main": "dist/ActionTabs.js",
   "scripts": {
+    "build": "./scripts/build.sh",
+    "prepublish": "npm run build",
     "start": "node server.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "./node_modules/.bin/mocha --compilers js:babel/register test/*-test.js",
+    "test-watch": "./node_modules/.bin/mocha --compilers js:babel/register -w test/*-test.js"
   },
   "repository": {
     "type": "git",
@@ -26,15 +30,21 @@
   },
   "homepage": "https://github.com/HurricaneJames/react-action-tabs",
   "devDependencies": {
+    "babel": "^5.8.21",
     "babel-core": "^5.4.7",
     "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.2",
     "eslint-plugin-react": "^2.3.0",
+    "expect.js": "^0.3.1",
+    "jsdom": "^6.0.0",
+    "mocha": "^2.2.5",
     "react-hot-loader": "^1.2.7",
+    "sinon": "^1.15.4",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
+    "radium": "^0.13.7",
     "react": "^0.13.0"
   }
 }
