--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "webpack-dev-server": "^1.8.2"
   },
   "dependencies": {
-    "react": "^0.13.0"
+    "react": "^0.13.0 | 0.14.0-rc1"
   }
 }
