--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "expect.js": "^0.3.1",
     "jsdom": "^6.0.0",
     "mocha": "^2.2.5",
+    "react": "0.13.0",
     "react-hot-loader": "^1.2.7",
     "sinon": "^1.15.4",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
   },
-  "dependencies": {
-    "react": "^0.13.0 | 0.14.0-rc1"
+  "peerDependencies": {
+    "react": ">0.13 <0.15"
   }
 }
